# Solana-Workspace

./: .gitignore  .gitmodules  README.md
api_server/: .gitignore  Cargo.toml
api_server/benches/: tps_benchmark.rs
api_server/docs/: ENGINE_DESIGN.md  ENGINE_IMPLEMENTATION_GUIDE.md  ORDERBOOK_STRATEGY.md
api_server/migrations/: 001_create_transactions.sql  002_create_users.sql  003_create_solana_wallets.sql  004_create_refresh_tokens.sql  005_create_user_balances.sql  006_create_orders.sql  007_create_trades.sql  008_create_fee_configs.sql  009_add_cascade_to_trades.sql  010_add_filled_quote_amount_to_orders.sql
api_server/sql_archive/: reset_all.sql
api_server/src/: lib.rs  main.rs
api_server/src/clients/: jupiter.rs
api_server/src/database/: connection.rs  mod.rs
api_server/src/database/repositories/: fee_config_repository.rs  mod.rs  order_repository.rs  refresh_token_repository.rs  trade_repository.rs  user_balance_repository.rs  user_repository.rs
api_server/src/domains/: mod.rs
api_server/src/domains/auth/: mod.rs  routes.rs
api_server/src/domains/auth/handlers/: auth_handler.rs  mod.rs
api_server/src/domains/auth/models/: auth.rs  jwt.rs  mod.rs
api_server/src/domains/auth/services/: auth_service.rs  jwt_service.rs  mod.rs  state.rs
api_server/src/domains/bot/: mod.rs  routes.rs
api_server/src/domains/bot/handlers/: bot_handler.rs  mod.rs
api_server/src/domains/bot/models/: config.rs  mod.rs
api_server/src/domains/bot/services/: binance_client.rs  bot_manager.rs  cleanup_scheduler.rs  mod.rs  orderbook_sync.rs  websocket_server.rs
api_server/src/domains/cex/: mod.rs  routes.rs
api_server/src/domains/cex/engine/: balance_cache.rs  engine.rs  executor.rs  matcher.rs  mock.rs  mod.rs  orderbook.rs  types.rs  wal.rs
api_server/src/domains/cex/engine/runtime/: balance_commands.rs  commands.rs  config.rs  db_commands.rs  engine.rs  mod.rs  threads.rs
api_server/src/domains/cex/handlers/: balance_handler.rs  mod.rs  order_handler.rs  position_handler.rs  trade_handler.rs
api_server/src/domains/cex/models/: balance.rs  fee.rs  mod.rs  order.rs  position.rs  trade.rs
api_server/src/domains/cex/services/: balance_service.rs  fee_service.rs  mod.rs  order_service.rs  position_service.rs  state.rs  trade_service.rs
api_server/src/domains/swap/: mod.rs  routes.rs
api_server/src/domains/swap/handlers/: mod.rs  swap_handler.rs  token_handler.rs
api_server/src/domains/swap/models/: mod.rs  swap.rs
api_server/src/domains/swap/services/: mod.rs  state.rs  swap_service.rs  token_service.rs
api_server/src/domains/wallet/: mod.rs  routes.rs
api_server/src/domains/wallet/handlers/: mod.rs  wallet_handler.rs
api_server/src/domains/wallet/models/: mod.rs  transaction.rs  wallet.rs
api_server/src/domains/wallet/services/: mod.rs  state.rs  wallet_service.rs
api_server/src/errors/: mod.rs
api_server/src/handlers/: auth_handler.rs  token_handler.rs  wallet_handler.rs
api_server/src/middleware/: auth.rs  mod.rs
api_server/src/models/: auth.rs  mod.rs  refresh_token.rs  solana_wallet.rs  swap.rs  tokens.rs  transaction.rs  wallet.rs
api_server/src/routes/: auth.rs  mod.rs  swap.rs  wallet.rs
api_server/src/services/: app_state.rs  auth_service.rs  jwt_service.rs  mod.rs  swap_service.rs  token_service.rs  wallet_service.rs
api_server/src/shared/: mod.rs
api_server/src/shared/clients/: jupiter.rs  mod.rs  solana.rs
api_server/src/shared/database/: connection.rs  mod.rs
api_server/src/shared/database/repositories/: mod.rs
api_server/src/shared/database/repositories/auth/: mod.rs  refresh_token_repository.rs  user_repository.rs
api_server/src/shared/database/repositories/cex/: balance_repository.rs  fee_repository.rs  mod.rs  order_repository.rs  trade_repository.rs
api_server/src/shared/database/repositories/wallet/: mod.rs  solana_wallet_repository.rs  transaction_repository.rs
api_server/src/shared/errors/: auth_error.rs  mod.rs
api_server/src/shared/middleware/: auth.rs  mod.rs
api_server/src/shared/services/: app_state.rs  mod.rs
api_server/src/shared/utils/: id_generator.rs  mod.rs
api_server/tests/: balance_management.rs  cancellation.rs  complex_scenarios.rs  concurrency.rs  integration_test.rs  limit_orders.rs  market_orders.rs  orderbook_api.rs  recovery.rs  self_trade.rs  validation.rs
api_server/tests/common/: mod.rs
client/solana-exchange/: PROJECT_PLAN.md  README.md  package-lock.json  package.json  tsconfig.json
client/solana-exchange/src/app/: layout.tsx  (+1 more)
prc/: .editorconfig  .gitignore  .prettierignore  README.md
prc/api_server/: Cargo.toml
prc/api_server/migrations/: 001_create_transactions.sql  002_create_users.sql  003_create_solana_wallets.sql
prc/api_server/src/: main.rs
prc/api_server/src/clients/: jupiter.rs  mod.rs  solana.rs
prc/api_server/src/database/: connection.rs  mod.rs  transaction_repository.rs
prc/api_server/src/database/repositories/: mod.rs  solana_wallet_repository.rs
prc/api_server/src/errors/: auth_error.rs  wallet_error.rs
prc/api_server/src/handlers/: auth_handler.rs  jupiter_handler.rs  mod.rs  swap_handler.rs  token_handler.rs  wallet_handler.rs
prc/api_server/src/models/: auth.rs  jupiter.rs  mod.rs  swap.rs  transaction.rs  user.rs
prc/api_server/src/routes/: auth.rs  jupiter.rs  mod.rs  swap.rs  tokens.rs  wallet.rs
prc/api_server/src/services/: app_state.rs  auth_service.rs  mod.rs  swap_service.rs  token_service.rs  wallet_service.rs
prc/contracts/my_counter/: package-lock.json
prc/contracts/token_vault/: Anchor.toml
prc/contracts/voting/: Anchor.toml  package-lock.json
prc/my_counter/: Anchor.toml
prc/my_counter/scripts/: increment-counter.ts
prc/token_vault/: package-lock.json
prc/token_vault/tests/: token_vault.ts
prc/tx_playground/: Anchor.toml  package-lock.json
prc/tx_playground/tests/: tx_playground.ts
prc/voting/tests/: voting.ts
(+31 files in other folders)
