[package]
name = "api_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP Client (axios 같은 역할)
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# OpenAPI/Swagger documentation
utoipa = { version = "4.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

# Solana client (RPC 통신용)
solana-client = "1.18"
solana-sdk = "1.18"
anchor-client = "0.30"
anchor-lang = "0.30"

# Database (PostgreSQL)
sqlx = { version = "0.6", default-features = false, features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "macros", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }

# Password hashing
argon2 = "0.5"

# Base64 encoding (for private key storage)
base64 = "0.21"

# JWT (JSON Web Tokens)
jsonwebtoken = "9.2"

